--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
                 <nav></nav>
             </div>
         </div>
-        <div class="maincontent"></div>
+        <div class="maincontent">
+            <h1>TOYS R US</h1>
+            <p>For girls...</p>
+        </div>
         <footer></footer>
     </div>
 </body>
